# UniAuth

./: .gitattribute  .gitattributes  .gitignore  AI_CHAT_COMPLETE_SUMMARY.md  CRITICAL_FIX_ARGS_EMPTY.md  DEBUG_MCP_PARAMS.md  MCP_AGENT_USAGE.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  QUICK_FIX_GUIDE.md  README.md  go.sum  main.go  package-lock.json  package.json
.github/workflows/: fontend-lint.yml  frontend-build.yml  gf-uniauth-build.yml  golangci-lint.yml  gosec_security_scanner.yml  ittools-sync-build.yml  jwt-rotator.yml
billing-sdk/: pyproject.toml
billing-sdk/billing_sdk/: __init__.py  client.py  models.py
billing-sdk/examples/: advanced_usage.py  basic_usage.py
internal/app/: app.go
internal/config/: config.go
internal/core/: types.go
internal/handlers/: admin.go  rule_management.go
internal/middleware/: cors.go  (+1 more)
ittools_sync/: Dockerfile  fetch_one_page.go  go.mod  go.sum  main.go  orm.go  types.go
jwt-rotater/: Dockerfile  main.go
jwt-rotator/: Dockerfile  go.mod  go.sum  main.go
routes/: routes.go
uniauth-admin/: .dockerignore  .gitignore  .lintstagedrc  README.md  biome.json  orval.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
uniauth-gf/: .gitignore  BILL-itso-deep-research-vip-20250912000453.xlsx  BILL-qp_122020255@link.cuhk.edu.cn-20250912000420.xlsx  Book1.xlsx  README.MD  go.mod  go.sum  main.go  migration.sql
uniauth-gin/: .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.yml  go.mod  go.sum  main.go  test_startup.sh
uniauth-go/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
uniauth-mcp/: mcp.py  pyproject.toml
uniauth-react/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite-env.d.ts  vite.config.ts
(+538 files in other folders)
